# Planning_Agent

./: .gitignore  README.md  Trial.ipynb  app.py  pyproject.toml  sessions.json
agent/: __init__.py  formatter.py  graph.py  llms.py  nodes.py  prompts.py  routers.py  state.py  tools.py  tracing.py
plans/: plan_20260620_142218.md  plan_20260620_142519.md  plan_20260627_122440.md  plan_20260627_122639.md  plan_20260628_201722.md  plan_20260628_201749.md  plan_20260628_201809.md  plan_20260628_201850.md
tests/: test_alignment_flow.py  test_formatter.py  test_nodes.py  test_routers.py  test_state.py
