[project]
name = "planning-agent"
version = "0.1.0"
description = "GitHub Copilot-style planning agent built with LangGraph"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",
    "openai>=1.0.0",
    "streamlit>=1.35.0",
    "tavily-python>=0.3.0",
    "wikipedia>=1.4.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
]

[project.scripts]
planning-agent = "main:main"
